Fix text align of brand name on HomePage

--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -28,6 +28,7 @@
 .titleContainer {
   color: var(--primary);
   font-size: var(--s-18);
+  text-align: center;
 }
 
 .formContainer {
